# R-SOD

./: DESCRIPTION  NAMESPACE  cleanup  configure  configure.ac
R/: RcppExports.R  functions.R  functions.R.in  zzz.R
data/: f186.txt
man/: DimSqueezer.Rd  DimSqueezer_CL.Rd  Rcpp_R_CL_DimSqueezer-class.Rd  Rcpp_R_DimSqueezer-class.Rd  SOD-package.Rd  dimfactors.Rd  f186.Rd  hsv_scale.Rd  plot_functions.Rd
src/: Makevars  Makevars.in  Makevars.win  R_DimSqueezer.cpp  R_DimSqueezer.h  RcppExports.cpp
src/sod/: DistanceMapper.cpp  DistanceMapper.h  mappingInfo.h  node_set.cpp  node_set.h  oCL_DistanceMapper.cpp  oCL_DistanceMapper.h  oCL_DistanceMapperManager.cpp  oCL_DistanceMapperManager.h  stressInfo.h
src/sod/oCL_Kernels/: move_deltoids_2.cl  move_deltoids_dummy.cl  oCL_Kernels.h
src/sod/open_cl/: clError.cpp  oCL_base.cpp
